# rasskazchikov_tppl

./: py.py
average/: main.asm
best_program/: CMakeLists.txt  README.md  data_collector.cpp  data_collector.h  main.cpp  test_data_collector.cpp
cow/: README.md  cow_interpreter.h  main.cpp  test_cow.cpp
cow/coverage_report/: index.html
cow/coverage_report/coverage/Alexey/Учёба/Новая папка (2)/rasskazchikov_tppl/cow/: cow_interpreter.h.html  test_cow.cpp.html
exam/ex1/: README.md  input.txt  main.py
exam/ex1/points/: points.py
exam/ex1/tests/: test_points.py
plib/plib/: base.py
plib/tests/: test_point.py
text_analyzer/: README.md
text_analyzer/tests/: test_text_analyzer.py
